--- a/pruebas/react-prueba-tecnica-traine/src/app.css
+++ b/pruebas/react-prueba-tecnica-traine/src/app.css
@@ -1,24 +1,31 @@
-*{
+* {
   padding: 0;
   margin: 0;
   box-sizing: border-box;
 }
 
-.home{
-  min-width: 100vw;
-  min-height: 100vh;
+.home {
   display: flex;
   justify-content: center;
   align-items: center;
   flex-direction: column;
-  gap: 1rem;
+  min-width: 100vw;
+  min-height: 100vh;
   text-align: center;
+  overflow: hidden;
+  gap: 1rem;
 }
-.div-img{
+
+.div-img {
   width: 500px;
-  height: auto;
+  height: 500px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
-img{
-  height:auto;
-  width: 100%;
+
+img {
+  max-width: 100%;
+  max-height: 100%;
+  object-fit: cover;
 }
